assets/css/main.css
/* ... */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
display: block;}

body {
    line-height: 1;
    overflow-x: hidden;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after, q:before, q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

body {
    -webkit-text-size-adjust: none;
}

mark {
    background-color: transparent;
    color: inherit;
}

input::-moz-focus-inner {
    border: 0;
    padding: 0;
}

input, select, textarea {
    -moz-appearance: none;
    -webkit-appearance: none;
    -ms-appearance: none;
    appearance: none;
}

/* Basic */

@-ms-viewport {
    width: device-width;
}

html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    background: #F8F8F8;
    font-family: 'Quattrocento', sans-serif;
    font-weight: 300;
    font-size: 17pt;
    line-height: 1.75em;
    color: #888;
    -webkit-text-stroke: 0.1px;
}

body.is-preload *, body.is-preload *:before, body.is-preload *:after {
    -moz-animation: none !important;
    -webkit-animation: none !important;
    -ms-animation: none !important;
    animation: none !important;
    -moz-transition: none !important;
    -webkit-transition: none !important;
    -ms-transition: none !important;
    transition: none !important;
}

.dark {
    color: white;
}

input, textarea, select {
    font-family: 'Quattrocento', sans-serif;
    font-weight: 300;
    font-size: 17pt;
    line-height: 1.75em;
    color: #888;
    -webkit-text-stroke: 0.1px;
}

h1, h2, h3, h4, h5, h6 {
    color: #666;
    margin: 0;
    font-weight: 700;
    line-height: 1.5em;
}

/* ADDED */
h2 {
    margin-bottom: 0.75em;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    color: inherit;
    text-decoration: none;
}

.dark h1, .dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
    color: #fff;
}

strong, b {
    font-weight: 800;
    color: inherit;
}

.dark strong, .dark b {
    color: #fff;
    color: rgba(255, 255, 255, 0.85);
}

em, i {
    font-style: italic;
}

a {
    -moz-transition: border-bottom-color 0.25s ease-in-out;
    -webkit-transition: border-bottom-color 0.25s ease-in-out;
    -ms-transition: border-bottom-color 0.25s ease-in-out;
    transition: border-bottom-color 0.25s ease-in-out;
    color: inherit;
    text-decoration: none;
    border-bottom: solid 1px rgba(0, 0, 0, 0.3);
}

a:hover {
    border-bottom-color: rgba(0, 0, 0, 1);
}

.dark a {
    color: #fff;
    border-bottom-color: rgba(255, 255, 255, 0.5);
}

.dark a:hover {
    border-bottom-color: rgba(255, 255, 255, 0);
}

sub {
    position: relative;
    top: 0.5em;
    font-size: 0.8em;
}

sup {
    position: relative;
    top: -0.5em;
    font-size: 0.8em;
}

hr {
    border: 0;
    border-top: solid 1px #e6e6e6;
    margin: 2em 0 2em 0;
}

.dark hr {
    border-top-color: rgba(255, 255, 255, 0.5);
}

blockquote {
    border-left: solid 0.25em #e6e6e6;
    padding: 1em 0 1em 2em;
    font-style: italic;
}

.dark blockquote {
    border-left-color: rgba(255, 255, 255, 0.5);
}

p, ul, ol, dl, table {
    margin-bottom: 1em;
}

p {
    text-align: justify;
}

header {
    margin-bottom: 1em;
}

header h1, header h2, header h3, header h4, header h5, header h6 {
    margin: 0;
}

header p {
    display: block;
    margin: 0;
    padding: 0.25em 0 0.5em 0;
}

footer {
    padding-top: 1.5em;
}

br.clear {
    clear: both;
}

.featured {
    text-align: center;
}

.featured p {
    text-align: center;
}

/* Container */

.container {
    margin: 0 auto;
    max-width: 100%;
    width: 1360px;
}

.container.medium {
    width: 1020px;
}

@media screen and (max-width: 1680px) {

    .container {
        width: 1200px;
    }

    .container.medium {
        width: 900px;
    }

}

@media screen and (max-width: 1280px) {

    .container {
        width: 960px;
    }

    .container.medium {
        width: 720px;
    }

}

@media screen and (max-width: 1000px) {

    .container {
        width: 100% !important;
    }

}

/* Row */

.row {
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    align-items: stretch;
}

.row > * {
    box-sizing: border-box;
}

.row.gtr-uniform > * > :last-child {
    margin-bottom: 0;
}

.row.aln-left {
    justify-content: flex-start;
}

.row.aln-center {
    justify-content: center;
}

.row.aln-right {
    justify-content: flex-end;
}

.row.aln-top {
    align-items: flex-start;
}

.row.aln-middle {
    align-items: center;
}

.row.aln-bottom {
    align-items: flex-end;
}

.row > .imp {
    order: -1;
}

.row > .col-1 {
    width: 8.3333333333%;
}

.row > .off-1 {
    margin-left: 8.3333333333%;
}

.row > .col-2 {
    width: 16.6666666667%;
}

.row > .off-2 {
    margin-left: 16.6666666667%;
}

.row > .col-3 {
    width: 25%;
}

.row > .off-3 {
    margin-left: 25%;
}

.row > .col-4 {
    width: 33.3333333333%;
}

.row > .off-4 {
    margin-left: 33.3333333333%;
}

.row > .col-5 {
    width: 41.6666666667%;
}

.row > .off-5 {
    margin-left: 41.6666666667%;
}

.row > .col-6 {
    width: 50%;
}

.row > .off-6 {
    margin-left: 50%;
}

.row > .col-7 {
    width: 58.3333333333%;
}

.row > .off-7 {
    margin-left: 58.3333333333%;
}

.row > .col-8 {
    width: 66.6666666667%;
}

.row > .off-8 {
    margin-left: 66.6666666667%;
}

.row > .col-9 {
    width: 75%;
}

.row > .off-9 {
    margin-left: 75%;
}

.row > .col-10 {
    width: 83.3333333333%;
}

.row > .off-10 {
    margin-left: 83.3333333333%;
}

.row > .col-11 {
    width: 91.6666666667%;
}

.row > .off-11 {
    margin-left: 91.6666666667%;
}

.row > .col-12 {
    width: 100%;
}

.row > .off-12 {
    margin-left: 100%;
}

.row.gtr-0 {
    margin-top: 0px;
    margin-left: 0px;
}

.row.gtr-0 > * {
    padding: 0px 0 0 0px;
}

.row.gtr-0.gtr-uniform {
    margin-top: 0px;
}

.row.gtr-0.gtr-uniform > * {
    padding-top: 0px;
}
/* ... */

